2006-06-29  Jakub Steiner <jimmac@ximian.com>

	* */apps/preferences-desktop-wallpaper.*: added a few
		details
	
2006-06-28  Rodney Dawes  <dobey@novell.com>

	* */apps/Makefile.am:
	* */apps/gnome-settings-background.*
	* */apps/wallpaper.*:

	Removed these old poorly named icons

	* */apps/Makefile.am:
	* */apps/preferences-desktop-wallpaper.*:

	Add this icon from Andreas Nilsson

	Fixes #313643

	* 22x22/categories/Makefile.am: Fix the size here so that icons are
	installing to the proper size directory in the theme
	
2006-06-28  Rodney Dawes  <dobey@novell.com>

	* 48x48/apps/Makefile.am:
	* 48x48/apps/xchat.png:
	Remove this icon, as it should be installed by xchat itself

	Fixes #153078

2006-06-28  Jakub Steiner <jimmac@ximian.com>

	* audio-volume*: volume bitmaps

2006-06-27  Jakub Steiner <jimmac@ximian.com>

	* {16x16,22x22}/apps/accessibility-directory.png,
	applets-screenshooter.png, boot.png, gnome-monitor.png,
	gnome-session.png: bitmap versions in tango style

2006-06-27  Rodney Dawes  <dobey@novell.com>

	* 48x48/actions/Makefile.am:
	* 48x48/actions/document-print-preview.png:
	Remove this icon, as there is a scalable version available

2006-05-15  Rodney Dawes  <dobey@novell.com>

	* scalable/mimetypes/text-x-preview.icon: Update to use proper
	coordinates for the SVG file as per the Icon Theme Specification

	Fixes #329877

2006-05-15  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.15.2 release

2006-05-15  Rodney Dawes  <dobey@novell.com>

	* configure.in: Remove ALL_LINGUAS and require intltool >= 0.35.0

2006-04-29  Jakub Steiner <jimmac@ximian.com>

	* scalable/actions/zoom-*: scalables by Lapo Calamandrei

2006-04-23  Rodney Dawes  <dobey@novell.com>

	* NEWS: Update for 2.15.1 release

	* configure.in: Up version to 2.15.1 for release
	Require icon-naming-utils 0.7.2 for fixes and updates
	
2006-04-21  Jakub Steiner <jimmac@ximian.com>

	* printer, document-print-preview, document-print: shape fixes
