@@ -1,13 +1,12 @@
 NULL=
 
-iconsize=24x24
+iconsize=16x16
 category=emblems
 icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)
 
 icon_DATA =\
 	emblem-favorite.png	\
-	emblem-important.png	\
-	emblem-symbolic-link.png \
+	emblem-important.png \
 	$(NULL)
 
 EXTRA_DIST = $(icon_DATA)
