@@ -64,6 +64,7 @@ scalable/Makefile
 16x16/stock/code/Makefile
 16x16/stock/data/Makefile
 16x16/stock/document/Makefile
+16x16/stock/emblems/Makefile
 16x16/stock/emoticons/Makefile
 16x16/stock/form/Makefile
 16x16/stock/generic/Makefile
@@ -80,6 +81,7 @@ scalable/Makefile
 22x22/apps/Makefile
 22x22/categories/Makefile
 22x22/devices/Makefile
+22x22/emblems/Makefile
 22x22/mimetypes/Makefile
 22x22/places/Makefile
 22x22/status/Makefile
