@@ -1,3 +1,10 @@
+2006-06-30  Jakub Steiner <jimmac@ximian.com>
+
+	* emblem-important, emblem-favorite: add properly sized emblem 
+		to all sizes (16x16,22x22, 24x24, 32x32, scalable)
+	* gnome-terminal.png: remove old filename
+	
+	
 2006-06-29  Jakub Steiner <jimmac@ximian.com>
 
 	* */apps/preferences-desktop-wallpaper.*: added a few
